# AI-Repo-Manager

./: .env.example  .gitignore  README.md  build-appimage.sh  build-deb.sh  pyproject.toml  release.sh  run.sh  update-local-package.sh
.github/workflows/: release.yml
debian/: ai-repo-manager.desktop  ai-repo-manager.sh  changelog  control  rules
src/: __init__.py  config.py  main.py  model_display.py
src/models/: __init__.py  repository.py
src/services/: __init__.py  database.py  github_service.py  huggingface_service.py  openrouter_service.py  vcs_detector.py  vector_store.py
src/ui/: __init__.py  main_window.py  progress_dialog.py  repo_list.py  settings_dialog.py  styles.py
